option('with_fftw3', type: 'boolean', value: false)
option('with_openmp', type: 'boolean', value: false)
option('with_mpi', type: 'boolean', value: false)

# BLAS implementation
option('with_openblas', type: 'boolean', value: false)
option('with_openblas64', type: 'boolean', value: false)
option('with_atlas', type: 'boolean', value: false)

option('with_superlu', type: 'boolean', value: false)
option('with_superlu_mt', type: 'boolean', value: false)
option('with_umfpack', type: 'boolean', value: false)
option('with_pardiso', type: 'boolean', value: false)

# Intel MKL
option('with_mkl', type: 'boolean', value: false)
option('mkl_root', type: 'string', value: '/opt/intel/mkl')
option('mkl_arch', type: 'string', value: 'intel64')
option('with_mkl_ilp64', type: 'boolean', value: false)
option('with_mkl_tbb', type: 'boolean', value: false)
option('with_mkl_cblas', type: 'boolean', value: false)
option('with_mkl_fftw3', type: 'boolean', value: false)
option('with_mkl_lapack', type: 'boolean', value: false)
option('with_mkl_dss', type: 'boolean', value: false)
option('with_mkl_cluster', type: 'boolean', value: false)

# NVIDIA CUDA
option('with_cuda', type: 'string')
option('with_cusolver', type: 'boolean', value: false)

option('with_introspection', type: 'boolean', value: false)
option('with_vapi', type: 'boolean', value: false)
